globus-gssapi-gsi (12.13-1+gt6.@distro@) @distro@; urgency=low

  * Skip mech v1 tests for OpenSSL >= 1.1.0

 -- Globus Toolkit <support@globus.org>  Mon, 19 Dec 2016 09:48:41 -0500

globus-gssapi-gsi (12.12-1+gt6.@distro@) @distro@; urgency=low

  * More updates for mech negotiation

 -- Globus Toolkit <support@globus.org>  Tue, 08 Nov 2016 14:14:26 -0500

globus-gssapi-gsi (12.11-1+gt6.@distro@) @distro@; urgency=low

  * Fix function arg mismatch

 -- Globus Toolkit <support@globus.org>  Mon, 24 Oct 2016 15:54:34 -0400

globus-gssapi-gsi (12.10-1+gt6.@distro@) @distro@; urgency=low

  * Add support for new mech oid for different MIC formats

 -- Globus Toolkit <support@globus.org>  Fri, 21 Oct 2016 13:27:10 -0400

globus-gssapi-gsi (12.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix bad index references

 -- Globus Toolkit <support@globus.org>  Wed, 21 Sep 2016 13:29:32 -0400

globus-gssapi-gsi (12.8-1+gt6.@distro@) @distro@; urgency=low

  * Fix hash detection

 -- Globus Toolkit <support@globus.org>  Tue, 20 Sep 2016 09:08:43 -0400

globus-gssapi-gsi (12.7-1+gt6.@distro@) @distro@; urgency=low

  * Add backward compatibility fallback in verify_mic

 -- Globus Toolkit <support@globus.org>  Mon, 19 Sep 2016 16:19:58 -0400

globus-gssapi-gsi (12.6-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 13:24:51 -0400

globus-gssapi-gsi (12.5-1+gt6.@distro@) @distro@; urgency=low

  * More tweaks to get_mic/verify_mic for 1.0.1

 -- Globus Toolkit <support@globus.org>  Tue, 06 Sep 2016 16:51:40 -0400

globus-gssapi-gsi (12.4-1+gt6.@distro@) @distro@; urgency=low

  * Updates for mic handling without using internal openssl structs

 -- Globus Toolkit <support@globus.org>  Tue, 06 Sep 2016 14:28:54 -0400

globus-gssapi-gsi (12.3-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:10:01 -0400
